# AI_test_sysytem

./: .env.example  .env.production.example  .gitignore  README.md
.monkeycode/: MEMORY.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  database.py  minio_client.py  storage.py
backend/app/modules/admin/: router.py  schemas.py  service.py
backend/app/modules/ai/: router.py  schemas.py  service.py
backend/app/modules/auth/: dependencies.py  models.py  router.py  schemas.py  seed_data.py  service.py
backend/app/modules/documents/: repository.py  router.py  schemas.py
backend/app/modules/feedback/: router.py  schemas.py  service.py
backend/app/modules/free_chat/: router.py  schemas.py  service.py
backend/app/modules/health/: router.py
backend/app/modules/knowledge/: router.py  schemas.py  service.py
backend/app/modules/parsing/: router.py  schemas.py  service.py
backend/app/modules/projects/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/modules/requirements/: router.py  schemas.py  service.py
backend/app/modules/risks/: router.py  schemas.py  service.py
backend/app/modules/test_items/: router.py  schemas.py  service.py
backend/templates/: validation-plan-v1.docx
backend/tests/: test_admin.py  test_auth_projects.py  test_documents.py  test_feedback.py  test_health.py  test_knowledge_ai.py  test_parsing.py  test_persistence.py  test_requirements.py  test_risks.py  test_test_items.py  test_test_packages.py  test_validation_plans.py
(+46 files in other folders)
