[project]
name = "gene-sequencer-ai-test-backend"
version = "0.1.0"
description = "Backend API for gene sequencer AI test planning MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.1.19",
    "redis>=5.0.4",
    "celery>=5.4.0",
    "minio>=7.2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
